--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
     <title>Kojiro's Portfolio</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
 
 
@@ -56,7 +56,7 @@
                     <span class="dg animated bounceInDown about-animated">u</span>
                     <span class="de animated bounceInDown about-animated">t</span>
 
-                    <img id="profile-photo" class="animated bounceInUp" src="http://lorempixel.com/500/500/people">
+                    <img id="profile-photo" class="animated bounceInUp" src="https://lorempixel.com/500/500/people">
 
             </div>
         </div>
