--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <title>Kojiro's Portfolio</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
-    
+    ;
 
 </head>
 
@@ -71,13 +71,13 @@
             <div id="content" class="animated bounceInUp col-sm-8 text-center">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="http://lorempixel.com/500/500/people">
+                        <img class="img-responsive animated bounceInUp" src="https://lorempixel.com/500/500/people">
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="http://lorempixel.com/500/500/nature">
+                        <img class="img-responsive animated bounceInUp" src="https://lorempixel.com/500/500/nature">
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="http://lorempixel.com/500/500">
+                        <img class="img-responsive animated bounceInUp" src="https://lorempixel.com/500/500">
                     </div>
                 </div>
             </div>
