--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <span class="dg animated bounceInDown about-animated">u</span>
                     <span class="de animated bounceInDown about-animated">t</span>
 
-                    <img id="profile-photo" class="animated bounceInUp" src="https://lorempixel.com/500/500/people">
+                    <img id="profile-photo" class="animated bounceInUp" src="/img/kojiro-professional.jpg">
 
             </div>
         </div>
