--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,6 @@
 </head>
 
 <body id="about-page">
-
-
-
     <nav classname="hamburger" role="navigation">
         <div id="menuToggle">
             <input type="checkbox" />
@@ -41,11 +38,49 @@
                     <a className={sciencePageClass} href="/portfolio.html">Portfolio</Link>
                 </li>
                 <li>
-                    <a className={spacePageClass} to="/contact.html">Contact</Link>
+                    <a className={spacePageClass} href="/contact.html">Contact</Link>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <div class="container about-container">
+
+        <div id="header" class="row text-center">
+            <div id="logo">
+                <span id="danger">
+                    <div></div>
+                    <span class="dd animated bounceInDown about-animated">C</span>
+                    <span class="da animated bounceInDown about-animated">o</span>
+                    <span class="dn animated bounceInDown about-animated">n</span>
+                    <span class="dg animated bounceInDown about-animated">t</span>
+                    <span class="de animated bounceInDown about-animated">a</span>
+                    <span class="dn animated bounceInDown about-animated">c</span>
+                    <span class="de animated bounceInDown about-animated">t</span>
+
+
+                    <img id="profile-photo" class="animated bounceInUp" src="https://lorempixel.com/500/500/people">
+
+            </div>
+        </div>
+
+        <div id="main" class="row">
+
+
+            <div id="content" class="animated bounceInUp col-sm-8 text-center">
+                <p class="personal-description">Fueled by passion and the desire for personal growth everyday, Kojiro is
+                    a Software Developer who... Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, atque
+                    maxime dicta eligendi delectus adipisci dolore illum aut vitae error nisi, quae, perspiciatis eaque
+                    repellat alias minima. Ab, perspiciatis totam.</p>
+
+            </div>
+        </div>
+    </div>
+    </div>
+
+    </div> -->
+
+
 </body>
 
 </html>
