--- a/index.html
+++ b/index.html
@@ -16,11 +16,38 @@
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
-    ;
+    
 
 </head>
 
 <body id="index-page">
+    <nav classname="hamburger" role="navigation">
+        <div id="menuToggle">
+            <input type="checkbox" />
+            <span class="first-span"></span>
+            <span class="second-span"></span>
+            <span class="third-span"></span>
+            <ul id="menu">
+                <li>
+                    <a href="/index.html">Home</a>
+                </li>
+                <li>
+                    <a href="/about.html">About</a>
+                </li>
+                <li>
+                    <a href="/portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="/contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="/">Resume</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
     <div class="container">
 
         <div id="header" class="row text-center">
@@ -71,13 +98,13 @@
             <div id="content" class="animated bounceInUp col-sm-8 text-center">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="https://lorempixel.com/500/500/people">
+                        <img class="img-responsive animated bounceInUp" src="/img/kojiro-professional.jpg">
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="https://lorempixel.com/500/500/nature">
+                        <img class="img-responsive animated bounceInUp" src="/img/kojiros-disc-golf-putt-edited.jpg">
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="https://lorempixel.com/500/500">
+                        <img class="img-responsive animated bounceInUp" src="/img/kojiro-working.jpg">
                     </div>
                 </div>
             </div>
