--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 </head>
 
 <body id="about-page">
-    <nav classname="hamburger" role="navigation">
+    <nav class="hamburger" role="navigation">
         <div id="menuToggle">
             <input type="checkbox" />
             <span class="first-span"></span>
@@ -29,16 +29,19 @@
             <span class="third-span"></span>
             <ul id="menu">
                 <li>
-                    <a className={mainPageClass} href="/index.html">Home</a>
+                    <a href="/index.html">Home</a>
                 </li>
                 <li>
-                    <a className={gamingPageClass} href="/about.html">About</a>
+                    <a href="/about.html">About</a>
                 </li>
                 <li>
-                    <a className={sciencePageClass} href="/portfolio.html">Portfolio</a>
+                    <a href="/portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a className={spacePageClass} href="/contact.html">Contact</a>
+                    <a href="/contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="/img/resume.pdf" target="blank">Resume</a>
                 </li>
             </ul>
         </div>
