--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body id="index-page">
-    <nav classname="hamburger" role="navigation">
+    <nav class="hamburger" role="navigation">
         <div id="menuToggle">
             <input type="checkbox" />
             <span class="first-span"></span>
@@ -41,14 +41,14 @@
                     <a href="/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="/">Resume</a>
+                    <a href="/img/resume.pdf" target="blank">Resume</a>
                 </li>
             </ul>
         </div>
     </nav>
 
 
-    <div class="container">
+    <div class="container index-content">
 
         <div id="header" class="row text-center">
             <div id="logo">
