--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="third-span"></span>
             <ul id="menu">
                 <li>
-                    <a href="/index.html">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
                     <a href="/about.html">About</a>
