--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/2.1.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-
 </head>
 
 <body id="about-page">
@@ -66,32 +65,36 @@
 
 
         <div class="auth-inner animated bounceInUp col-sm-8 contact-content">
-            <form>
-                <h3 class="text-center">Contact me through email, phone, or by filling out the form below. I will personally respond as soon as possible.</h3>
-                <p class="text-center">Email: skylerkhiggins@gmail.com</p>
-                <p class="text-center">Phone: 980-202-9533</p>
-                <p class="text-center">LinkedIn: <a href="https://www.linkedin.com/in/skyler-higgins/" target="blank">linkedin.com/in/skyler-higgins</a></p>
-                <p class="text-center">GitHub: <a href="https://github.com/SKojiroHiggins" target="blank">github.com/SKojiroHiggins</a></p>
-
+            <form method="POST" name="contact" action="https://formsubmit.co/skylerkhiggins@gmail.com">
+                <h3 class="text-center contact-title">Let's talk</h3>
+                <!-- <p class="text-center">LinkedIn: <a href="https://www.linkedin.com/in/skyler-higgins/"
+                        target="blank">linkedin.com/in/skyler-higgins</a></p>
+                <p class="text-center">GitHub: <a href="https://github.com/SKojiroHiggins"
+                        target="blank">github.com/SKojiroHiggins</a></p> -->
+                <div class="contact-links">
+                    <a href="https://www.linkedin.com/in/skyler-higgins/"><img class="contact-logo" src="img/linkedin-logo.png" /></a>
+                    <a href="https://github.com/SKojiroHiggins"><img class="contact-logo" src="img/github-logo.png" /></a>
+                    <a href="https://github.com/SKojiroHiggins"><img class="contact-logo" src="img/instagram-logo.png" /></a>
+                </div>
 
                 <div class="form-group">
                     <label>Name</label>
-                    <input type="text" class="form-control" placeholder="Your name" />
+                    <input type="text" name="name" class="form-control" placeholder="Your name" />
                 </div>
 
                 <div class="form-group">
                     <label>Email address</label>
-                    <input type="email" class="form-control" placeholder="Your email" />
+                    <input type="email" name="email" class="form-control" placeholder="Your email" />
                 </div>
 
                 <div class="form-group">
                     <label>Comment</label>
-                    <textarea type="password" class="form-control contact-comment"
+                    <textarea class="form-control contact-comment" name="comment"
                         placeholder="Your comment here"></textarea>
                 </div>
 
                 <button class="btn btn-primary btn-block">
-                    Submit
+                    Send
                 </button>
             </form>
         </div>
