last updated text

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
                 <div class="contact-links">
                     <a href="https://www.linkedin.com/in/skyler-higgins/"><img class="contact-logo" src="img/linkedin-logo.png" /></a>
                     <a href="https://github.com/SKojiroHiggins"><img class="contact-logo" src="img/github-logo.png" /></a>
-                    <a href="https://github.com/SKojiroHiggins"><img class="contact-logo" src="img/instagram-logo.png" /></a>
+                    <a href="https://www.instagram.com/its_kojiro/"><img class="contact-logo" src="img/instagram-logo.png" /></a>
                 </div>
 
                 <div class="form-group">
