--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
             </div>
         </div>
 
+        <p class="animated bounceInUp col-sm-8 updated">*last updated 7/17/2020</p>
+
     </div>
 </body>
 
