apple designer changes

--- a/about.html
+++ b/about.html
@@ -67,11 +67,9 @@
         <div id="main" class="row">
 
 
-            <div id="content" class="animated bounceInUp col-sm-8 text-center">
-                <p class="personal-description">Fueled by passion and the desire for personal growth everyday, Kojiro is
-                    a Software Developer who... Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, atque
-                    maxime dicta eligendi delectus adipisci dolore illum aut vitae error nisi, quae, perspiciatis eaque
-                    repellat alias minima. Ab, perspiciatis totam.</p>
+            <div id="content" class="animated bounceInUp col-sm-8 text-center about-content">
+                <p class="personal-description">Fueled by passion and curiosity, Kojiro is
+                    a Software Engineer Apprentice from Red Ventures' Road2Hire program. Has been taught numerous technical skills, with experience in HTML, CSS, JavaScript, Node.js, React.js, MySQL, and MongoDB. Has recently lead a team of 5 developers to rebuild a professional React website, fully taking advantage of the component based aspect of React. </p>
 
             </div>
         </div>
