--- a/index.html
+++ b/index.html
@@ -98,13 +98,19 @@
             <div id="content" class="animated bounceInUp col-sm-8 text-center">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="/img/kojiro-professional.jpg">
+                        <img class="img-responsive animated bounceInUp index-img" src="/img/kojiro-working.jpg">
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="/img/kojiros-disc-golf-putt-edited.jpg">
+                        <img class="img-responsive animated bounceInUp index-img" src="/img/kojiros-disc-golf-putt-edited.jpg">
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive animated bounceInUp" src="/img/kojiro-working.jpg">
+                        <img class="img-responsive animated bounceInUp index-img" src="/img/fun-description.png">
+
+                        <!-- <div class="index-card index-card-animation">
+                            <div class="flip-card-inner index-card-animation ">
+                                    <p class="index-card-about">Loves problem solving, sports, and boardgames. Kojiro is here to work hard and have a good time. </p>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
